fixed layout overflow mobile version

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: 'Basier Circle';
     src: local('Basier Circle Circle SemiBold'), local('Basier-Circle-Circle-SemiBold'),
@@ -38,13 +37,15 @@ body {
     background-color: rgb(243, 244, 245);
     font-family: var(--secondaryFont);
     font-size: 16px;
+
+    overflow-x: hidden;
 }
 
 a {
     text-decoration: none;
 }
 
-header {
+.container-location-header, .container-nav {
     width: 100%;
 
     border-bottom: 1px solid rgb(223, 227, 231);
@@ -57,6 +58,13 @@ header {
     justify-content: space-between;
 }
 
+.container-nav {
+    position:sticky;
+    position: -webkit-sticky;
+    top: 0.01rem;
+    background-color: var(--blurry-header);
+}
+
 .location-header {
     font-size: 12px;
     line-height: 16px;
@@ -65,7 +73,6 @@ header {
 
     max-width: 1000px;
     width: 100%;
-
 
     display: flex;
     flex-wrap: wrap;
@@ -134,11 +141,6 @@ header {
 }
 
 nav {
-    position: sticky;
-    top: 1rem;
-    background-color: var(--blurry-header);
-    z-index: 2;
-
     max-width: 1000px;
     width: 100%;
 }
@@ -255,6 +257,12 @@ nav {
     margin-top: 2.5rem;
 }
 
+.sticky-cta {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+}
+
 .cards {
     display: grid;
     gap: 1.25rem;
@@ -320,6 +328,10 @@ nav {
     margin-right: auto;
 }
 
+.footer-container {
+    padding: 2.5rem 1rem;
+}
+
 footer {
     width: 100%;
 
@@ -333,10 +345,6 @@ footer {
     justify-content: center;
 
     text-align: center;
-}
-
-.footer-container {
-    padding: 2.5rem 1rem;
 }
 
 .footer-plans h2 {
@@ -387,16 +395,17 @@ footer {
 }
 
 
-@media screen and (min-width: 720px){
+@media screen and (min-width: 719px){
     #card-1 {
         background-image: url(https://cdn.revolut.com/website/assets/retail/home-V3/Payments.jpg);
+        background-position: center center;
     }
 }
 
 
 #card-2 {
     background-image: url(https://cdn.revolut.com/website/assets/retail/home-V3/Budgeting_Mobile.jpg);
-    background-position: center;
+    background-position: center center;
 }
 
 #card-3 {
@@ -420,12 +429,12 @@ footer {
 }
 #card-7 {
     background-image: url(https://cdn.revolut.com/website/assets/retail/home-V3/US/Home_crypto_mobile_big.jpg);
-    background-position: right bottom;
+    background-position: center center;
 }
 
 #card-8 {
     background-image: url(https://cdn.revolut.com/website/assets/retail/home-V3/US/Home_Vaults_Mobile_USD.jpg);
-    background-position: right bottom;
+    background-position: center center;
 }
 
 #card-9 {
